src/objects/c2g__codaCashMatchingSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Cash Matching Settings (FF)</description>
    <fields>
        <fullName>c2g__AsynchMatchingThreshold__c</fullName>
        <label>Asynch Matching Threshold</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__AsynchUndoMatchThreshold__c</fullName>
        <label>Asynch Undo Match Threshold</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__BackgroundMatchingBatchSize__c</fullName>
        <label>Background Matching Batch Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__EnableExtendedCashMatching__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables Extended Cash Matching. Redirects users from the Classic Cash Matching pages.</description>
        <label>DEPRECATED:Enable Extended Cash Matching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__MatchingLinesThreshold__c</fullName>
        <label>Background Matching Lines Threshold</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__MatchingReferencesThreshold__c</fullName>
        <label>Background Matching References Threshold</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ShowAnalysisSectionByDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Analysis Section by Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ShowDiscountValues__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that you want to show Discount values on the Extended Cash Matching page (Other Transactions pane).</description>
        <label>Show Discount Values</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ShowRemainingValues__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that you want to show Remaining values on the Extended Cash Matching page (Other Transactions pane).</description>
        <label>Show Remaining Values</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ShowWriteoffValues__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that you want to show Write-off values on the Extended Cash Matching page (Other Transactions pane).</description>
        <label>Show Write-off Values</label>
        <type>Checkbox</type>
    </fields>
    <label>Cash Matching Settings (FF)</label>
</CustomObject>